--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
-<h1>I am in the app component</h1>
-<app-server></app-server>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            <h3>I am in the app component</h3>
+            <app-servers></app-servers>
+        </div>
+    </div>
+</div>
+
