add three types of selectors

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,13 @@
     <div class="row">
         <div class="col-xs-12">
             <h3>I am in the app component</h3>
-            <app-servers></app-servers>
+            <!-- <app-servers></app-servers> -->
+
+            <!-- now angular select the element by attribute name -->
+            <!-- <div app-servers></div> -->
+
+            <!-- select by classname -->
+            <div class="app-servers"></div>
         </div>
     </div>
 </div>
-
