did practice of string interpolation and property binding uptill now

--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,2 +1,5 @@
+<button class="btn btn-primary" [disabled]="!allowNewServer">Add Server</button>
+<br>
+{{allowNewServer}}
 <app-server></app-server>
 <app-server></app-server>
