done 2 way data binding and moved to directived

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
-            <h3>I am in the app component</h3>
+            <br>
+            <h3>I'm in the app component</h3>
             <!-- <app-servers></app-servers> -->
 
             <!-- now angular select the element by attribute name -->
