second folder basic guide complete

--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,1 +1,2 @@
-<p>{{'Server'}} Id is {{serverId}} and status is {{getServerStatus()}}</p>
+<p [ngStyle]="{background:getColor()}" [ngClass]="{online:serverStatus==='online' }">{{'Server'}} Id is {{serverId}} and
+    status is {{getServerStatus()}}</p>
