--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -3,9 +3,7 @@
 
 <!-- <input type="text" class="form-control" (input)="onUpdateServerName($event)"> -->
 
-<input type="text" class="form-control"
-[(ngModel)]="serverName" 
->
+<input type="text" class="form-control" [(ngModel)]="serverName">
 
 <!-- {{serverName}} -->
 <br>
@@ -18,6 +16,13 @@
 <br>
 <!-- {{allowNewServer}} -->
 <!-- <p> {{serverCreationStatus}}</p> -->
-<p>Server was created server name is {{serverName}}</p>
-<app-server></app-server>
-<app-server></app-server>
+<p *ngIf="serverCreated; else noServer">Server was created server name is
+    {{serverName}}</p>
+<ng-template #noServer>
+    <p>No server was created!</p>
+</ng-template>
+
+<!-- <app-server *ngFor="let server of servers"></app-server> -->
+
+<div *ngFor="let logItem of log; let i=index" [ngStyle]="{backgroundColor:i>=4?'blue':'yellow'}"
+    [ngClass]="{'white':i>=4}">{{logItem}}</div>
