--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,13 +3,14 @@
         <div class="col-xs-12">
             <br>
             <h3>I'm in the app component</h3>
+            <app-header></app-header>
             <!-- <app-servers></app-servers> -->
 
             <!-- now angular select the element by attribute name -->
             <!-- <div app-servers></div> -->
 
             <!-- select by classname -->
-            <div class="app-servers"></div>
+            <!-- <div class="app-servers"></div> -->
         </div>
     </div>
 </div>
