app header comp creted

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,9 @@
+<app-header></app-header>
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
-            <br>
-            <h3>I'm in the app component</h3>
-            <app-header></app-header>
-            <!-- <app-servers></app-servers> -->
-
-            <!-- now angular select the element by attribute name -->
-            <!-- <div app-servers></div> -->
-
-            <!-- select by classname -->
-            <!-- <div class="app-servers"></div> -->
+            <app-recipes></app-recipes>
+            <app-shopping-list></app-shopping-list>
         </div>
     </div>
 </div>
