--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,11 @@
+<!-- app header -->
 <app-header></app-header>
+
+<!-- app body -->
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
-            <app-recipes></app-recipes>
+            <!-- <app-recipes></app-recipes> -->
             <app-shopping-list></app-shopping-list>
         </div>
     </div>
