shopping comp also created

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
-            <!-- <app-recipes></app-recipes> -->
+            <app-recipes></app-recipes>
             <app-shopping-list></app-shopping-list>
         </div>
     </div>
