when click on recipe item it show detail of that comp uptill work done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <!-- app header -->
-<app-header></app-header>
+<app-header (tabToggler)="getActiveTab($event)"></app-header>
 
 <!-- app body -->
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
-            <app-recipes></app-recipes>
-            <app-shopping-list></app-shopping-list>
+            <app-recipes *ngIf='activeTab==="recipes"'></app-recipes>
+            <app-shopping-list *ngIf='activeTab=="shoppingList"'></app-shopping-list>
         </div>
     </div>
 </div>
