--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,12 +1,12 @@
 <div class="row">
-    <div class="col-xs-12">
-        <img src="" alt="" class=img-responsive>
+    <div class="col-xs-12" *ngIf="selectedRecipeItem">
+        <img src="{{selectedRecipeItem.imagePath}}" alt="{{selectedRecipeItem.name}}" class=img-responsive>
     </div>
 </div>
 
 <div class="row">
     <div class="col-xs-12">
-        <h1>Recipe Name</h1>
+        <h1 *ngIf="selectedRecipeItem">{{selectedRecipeItem.name}}</h1>
     </div>
 </div>
 
@@ -26,8 +26,8 @@
 </div>
 
 <div class="row">
-    <div class="col-xs-12">
-        Description
+    <div class="col-xs-12" *ngIf="selectedRecipeItem">
+        {{selectedRecipeItem.description}}
     </div>
 </div>
 
